testing/errors/obsolete2.a
	*=$1000
	!pseudopc $c000	; -> ""!pseudopc/!realpc" is obsolete; use "!pseudopc {}" instead."
